List view project is updated

--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -2,6 +2,7 @@
 .css
 {
     font-weight: bolder;
-    color:darkorange;
+    color: gold;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: larger;
 }
